# quart-rest-template

./: .dockerignore  .example.env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py
app/models/: auth.py
app/routes/: auth.py  hello.py
app/utils/: db.py  docs.py  jwt.py  role_validator.py
